--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "firebase": "^9.6.11",
+    "ionicons": "^6.0.3",
     "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0"
+    "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
